# Vulkan-Free-Form-Area-Light

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: CMakeLists.txt
resources/images/: ltc.dds  ltc.hdr  ltc_amp.dds  ltc_amp.hdr  sample.dds
resources/meshes/: lights.mtl  plane.mtl  station_only.mtl  train.mtl  twolights.mtl  wahoo.mtl
resources/shaders/: flat.frag  flat.vert  light.frag  light.vert  ltc.frag  ltc.vert  mesh_flat.frag  mesh_flat.mesh  mesh_flat.task  mesh_light.frag  mesh_light.mesh  mesh_light.task  mesh_ltc.frag  mesh_ltc.mesh  mesh_ltc.task
src/: BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  Model.cpp  Model.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandPool.cpp  commandPool.h  commandbuffer.h  common.h  dds.cpp  dds.h  device.cpp  device.h  graphicsPipeline.cpp  graphicsPipeline.h  instance.cpp  instance.h  ltc.cpp  ltc.h  ltc_fit.cpp  ltc_fit.h  main.cpp  meshGraphicsPipeline.cpp  meshGraphicsPipeline.h  nelder_mead.h  pch.h  swapchain.cpp  swapchain.h  uniform.cpp  uniform.h  vulkanUtils.h
src/cudaHelper/: CMakeLists.txt  compute.cu  gaussian.cuh
src/engine/: CMakeLists.txt  pch.h
src/engine/core/: application.cpp  application.h  entryPoint.h  layer.cpp  layer.h
src/engine/core/layers/: imguiLayer.cpp  imguiLayer.h
src/engine/renderEngine/: buffer.cpp  buffer.h  commandBuffer.cpp  commandPool.cpp  commandPool.h  commandbuffer.h  descriptor.cpp  descriptor.h  device.cpp  device.h  graphicsPipeline.cpp  graphicsPipeline.h  instance.cpp  instance.h  pipelineInput.cpp  pipelineInput.h  renderEngine.cpp  renderEngine.h  renderPass.cpp  renderPass.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex.h
src/engine/renderEngine/meshlet/: meshlet.cpp  meshlet.h
src/engine/scene/: atlasTexture.cpp  atlasTexture.h  image.cpp  image.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  meshlet.cpp  meshlet.h  perspectiveCamera.cpp  perspectiveCamera.h  quad.cpp  quad.h  scene.cpp  scene.h  transformation.h
src/ltc_prep/: CMakeLists.txt  brdf.cpp  brdf.h  ltc_fit.cpp  ltc_fit.h
src/sandbox/: CMakeLists.txt  sanbox.cpp  testLayer.cpp  testLayer.h
src/scene/: mesh.cpp  perspectiveCamera.cpp  perspectiveCamera.h  transformable.h  transformation.h
